  This is the intended, more predictable behavior: default is a default for
  the key, not the module. For example::

      # If config['foo']['bar'] is not set, return 'baz'.
      config.get('foo', 'bar', default='baz')

      # If config['foo'] is not set, return None. Default is ignored here.
      config.get('foo', default='baz')


Version 0.5 - August 13, 2010
=============================
- Better compatibility with webapp:
  - webapp2.WSGIapplication can be used with webapp.RequestHandler.
  - webapp.WSGIapplication can be used with webapp2.RequestHandler.

  Although the functionality becomes limited in both cases, this should help
  migration.

- Review of Response based on observations from
  http://pythonpaste.org/webob/differences.html#webapp-response:

  - Response.out is now a reference to self, to use webob.Response's neat
    .write() method which can handle both string and unicode.
  - Response.clear() now sets .body = '' instead of .app_iter = [].

- Added Response.write(), for compatibility with StringIO behavior in webapp
  when calling write() passing non-basestring values (issue 2).

- Removed url_escape() and url_unescape(). Unused or almost unused.

- ErrorHandlers can now be defined as strings to be lazily loaded, as they
  now use the same dispatch mechanism of other handlers.

Backwards compatibility warning
-------------------------------
- The method handle_exception() is called from app-wide error handlers.
  Previously, get() was called.


Version 0.4.1 - August 08, 2010
===============================
- Removed router parameter from get_routes(), get_match_routes(),
  get_build_routes(). This simplifies multi-routes quite a bit.


Version 0.4 - August 07, 2010
=============================
- redirect() and redirect_to() now accept a keyword argument 'abort' to raise
  an exception to do the redirect.

- '_netloc' can be passed to url_for() build URLs for a given domain or
  subdomain.
